# mlir-toy-nn

./: .gitignore  CMakeLists.txt  NonLinInterReg.csv  README.md  RingClassification.csv  toyc.cpp
include/toy/: CMakeLists.txt  Dialect.h  Ops.td  Passes.h
mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  LowerToyStructToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
